tests/invalid/non_static_owner.stderr
warning: unused variable: `c`
 --> $DIR/non_static_owner.rs:7:9
  |
7 |     let c: OnceSelfCell<&String, Cell<&String>> = OnceSelfCell::new(&owner, |_| panic!());
  |         ^ help: if this is intentional, prefix it with an underscore: `_c`
  |
  = note: `#[warn(unused_variables)]` on by default

error[E0597]: `owner` does not live long enough
 --> $DIR/non_static_owner.rs:7:69
  |
7 |     let c: OnceSelfCell<&String, Cell<&String>> = OnceSelfCell::new(&owner, |_| panic!());
  |                                                   ------------------^^^^^^---------------
  |                                                   |                 |
  |                                                   |                 borrowed value does not live long enough
  |                                                   argument requires that `owner` is borrowed for `'static`
8 | }
  | - `owner` dropped here while still borrowed
